compilers/ID/cool/regression/BASE_cgtest/old_cool/start.cl.stderr
./BASE_cgtest/start.cl:3: No 'main' method in class Main.
Compilation halted due to static semantic errors.
