compilers/ID/cool/regression/BASE_cgtest/old_cool/start.cl
class Main is 
   a : Main <- new Main;
end;
